--- a/lab-intro-probability.ipynb
+++ b/lab-intro-probability.ipynb
@@ -38,11 +38,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probability of having seats suficients is approximately 0.8844772466215431\n"
+     ]
+    }
+   ],
    "source": [
-    "#code here"
+    "from scipy.stats import binom\n",
+    "seats = 450\n",
+    "miss = 0.97\n",
+    "sell = 460\n",
+    "probability = binom.cdf(seats,sell,miss)\n",
+    "print(f'The probability of having seats suficients is approximately {probability}')"
    ]
   },
   {
@@ -72,11 +85,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probability to make at least three attempts before successfully resolving a customer complaint is 0.49\n"
+     ]
+    }
+   ],
    "source": [
-    "#code here"
+    "from scipy.stats import geom\n",
+    "p = 0.3\n",
+    "geom_dist = geom(p)\n",
+    "print(f'The probability to make at least three attempts before successfully resolving a customer complaint is {1-geom_dist.cdf(2)}')\n"
    ]
   },
   {
@@ -107,11 +131,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probability that tomorrow we dont observe an accident is 0.4881088783012486\n"
+     ]
+    }
+   ],
    "source": [
-    "#code here"
+    "from scipy.stats import poisson\n",
+    "\n",
+    "mu = 500\n",
+    "poisson_dist = poisson(mu)\n",
+    "probability = 1-poisson_dist.cdf(500)\n",
+    "print(f\"The probability of the website server being overwhelmed {probability}\")"
    ]
   },
   {
@@ -123,11 +160,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probability of being overwhelmed at some point during a day 0.9999998952238752\n"
+     ]
+    }
+   ],
    "source": [
-    "#code here"
+    "probability2 = 1-(1-probability) **24\n",
+    "print(f\"The probability of being overwhelmed at some point during a day {probability2}\")"
    ]
   },
   {
@@ -243,7 +289,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
