lab-intro-probability

--- a/lab-intro-probability.ipynb
+++ b/lab-intro-probability.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -52,10 +52,11 @@
    "source": [
     "from scipy.stats import binom\n",
     "seats = 450\n",
-    "miss = 0.97\n",
-    "sell = 460\n",
-    "probability = binom.cdf(seats,sell,miss)\n",
-    "print(f'The probability of having seats suficients is approximately {probability}')"
+    "p = 1-0.03\n",
+    "n = 460\n",
+    "binom_dist = binom(n,p)\n",
+    "probability1 = binom_dist.cdf(seats)\n",
+    "print(f'The probability of having seats suficients is approximately {probability1}')"
    ]
   },
   {
@@ -85,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +101,8 @@
     "from scipy.stats import geom\n",
     "p = 0.3\n",
     "geom_dist = geom(p)\n",
-    "print(f'The probability to make at least three attempts before successfully resolving a customer complaint is {1-geom_dist.cdf(2)}')\n"
+    "probability2 = 1-geom_dist.cdf(2)\n",
+    "print(f'The probability to make at least three attempts before successfully resolving a customer complaint is {probability2}')\n"
    ]
   },
   {
@@ -131,14 +133,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The probability that tomorrow we dont observe an accident is 0.4881088783012486\n"
+      "The probability of the website server being overwhelmed is 0.01289822084039205\n"
      ]
     }
    ],
@@ -147,8 +149,8 @@
     "\n",
     "mu = 500\n",
     "poisson_dist = poisson(mu)\n",
-    "probability = 1-poisson_dist.cdf(500)\n",
-    "print(f\"The probability of the website server being overwhelmed {probability}\")"
+    "probability3 = 1-poisson_dist.cdf(550)\n",
+    "print(f\"The probability of the website server being overwhelmed is {probability3}\")"
    ]
   },
   {
@@ -160,20 +162,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The probability of being overwhelmed at some point during a day 0.9999998952238752\n"
+      "The probability of being overwhelmed at some point during a day is 0.2677043869515715\n"
      ]
     }
    ],
    "source": [
-    "probability2 = 1-(1-probability) **24\n",
-    "print(f\"The probability of being overwhelmed at some point during a day {probability2}\")"
+    "probability3_2 = 1-(1-probability3) **24\n",
+    "print(f\"The probability of being overwhelmed at some point during a day is {probability3_2}\")"
    ]
   },
   {
@@ -203,10 +205,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probability that the next customer will arrive within the next 5 minutes is 0.3934693402873666\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import expon\n",
+    "\n",
+    "#the parameter represents the rate of events occuring per unit of time\n",
+    "lambda_value = 0.1\n",
+    "\n",
+    "lambda_inv = expon(scale = 1/lambda_value)\n",
+    "\n",
+    "probability4 = lambda_inv.cdf(5)\n",
+    "print(f'The probability that the next customer will arrive within the next 5 minutes is {probability4}')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -219,10 +239,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probability an employee taking a break is 0.22313016014842982\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "t = 15\n",
+    "probability4_2 = math.exp(-lambda_value*t)\n",
+    "print(f'The probability an employee taking a break is {probability4_2}')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -242,11 +275,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probability that its weight is between 140 and 160 grams is 0.6826894921370859\n"
+     ]
+    }
+   ],
    "source": [
-    "#code here"
+    "from scipy.stats import norm\n",
+    "\n",
+    "mean = 150\n",
+    "std = 10\n",
+    "\n",
+    "norm_dist = norm(loc=mean, scale=std)\n",
+    "\n",
+    "probability5 = norm_dist.cdf(160) - norm_dist.cdf(140)\n",
+    "\n",
+    "print(f'The probability that its weight is between 140 and 160 grams is {probability5}')"
    ]
   },
   {
@@ -265,11 +315,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probability that the component fails within the first 30 hours is 0.4511883639059735\n"
+     ]
+    }
+   ],
    "source": [
-    "#code here"
+    "mean_lifetime = 50\n",
+    "lambda_failure = 1 / mean_lifetime\n",
+    "time = 30\n",
+    "\n",
+    "probability6 = 1 - math.exp(-lambda_failure * time)\n",
+    "print(f'The probability that the component fails within the first 30 hours is {probability6}')"
    ]
   }
  ],
